--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
                 <button onclick="addNumToInput(8)">8</button>
                 <button onclick="addNumToInput(9)">9</button>
                 <button onclick="addNumToInput(0)">0</button>
+                <button onclick="addNumToInput('-')">-</button> <!-- Botón para el signo - -->
+                <button onclick="addNumToInput('.')">.</button> <!-- Botón para el punto decimal -->
                 <button onclick="clearInput()">Limpiar</button>
                 <button onclick="backspaceInput()">Borrar</button>
             </div>
