--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <title>Operaciones</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="mate.png" type="image/png">
+    <title>Operaciones</title>
 </head>
 <body>
     <div class="container">
-        <h2>Problemas Matematicos</h2>
+        <h2>Problemas Matemáticos</h2>
         <section class="container-operadores">
 
             <button id="suma" onclick="btnSumar()">
@@ -59,6 +59,11 @@
         <section id="mjs_correccion">
 
         </section>
+
+        <div>
+            <span id="caritas_correctas">Correctas: 0</span>
+            <span id="caritas_incorrectas">Incorrectas: 0</span>
+        </div>
     </div>
 
     <script src="main.js"></script>
