--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
 
         </section>
 
+        <!-- Elementos para mostrar el tiempo restante -->
+        <div id="tiempos">
+            <span id="t.restante-suma">Tiempo: 120 segundos</span>
+            <span id="t.restante-resta">Tiempo: 120 segundos</span>
+            <span id="t.restante-producto">Tiempo: 120 segundos</span>
+            <span id="t.restante-division">Tiempo: 120 segundos</span>
+        </div>
+
         <!-- Botón para volver al menú -->
         <a href="https://juegos-5to-baco.onrender.com" class="volver-al-menu">Volver al Menú</a>
     </div>
